--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ test ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -19,3 +19,5 @@ jobs:
         node-version: "12"
     - run: npm ci
     - run: npm run build
+    - run: npm i -g vercel
+    - run: vercel --prod
