--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -24,4 +24,4 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm i -g vercel
-    - run: vercel --token ${{ secrets.VERCEL_TOKEN }}
+    - run: vercel --token ${{ secrets.VERCEL_TOKEN }} --confirm
