--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "gatsby-cuto",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Cuto Wallpaper official website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "icodesign <leimagnet@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.26.1",
+    "gatsby": "^2.30.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^0.5.0",
@@ -23,7 +23,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "svg-react-loader": "^0.4.6"
   },
   "devDependencies": {
     "prettier": "2.2.1"
