--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -20,4 +20,4 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm i -g vercel
-    - run: vercel --prod
+    - run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --confirm
